# Valdala

./: .gitignore  .gitmodules  README.md  Taskfile.yaml  notes.md  taskfile.yaml
application/: build.zig  build.zig.zon  main.v  project.json  taskfile.yaml  v.mod  yamc
application/geometry/: matrix.v  transform.v  transform_test.v
application/glfw/: glfw.v  glfw3webgpu.v  window.v
application/glfw3webgpu/: glfw3webgpu.v
application/graphics/: projection.v  renderer.v  window.v
application/include/: glfw3webgpu.h
application/libraries/: .gitignore  README.md
application/shaders/: colored.wgsl  textured.wgsl  textured_plane.wgsl
application/source/: asset.c3  glfw-webgpu.zig  glfw.zig  log.c3  main.c3  main.v  main.zig  tests.zig  transform.zig  v.mod
application/src/: main.c3  main.v
application/webgpu/: adapter.v  bind_group.v  bind_group_layout.v  buffer.v  command_buffer.v  command_encoder.v  dependencies.v  device.v  functions.v  glfw3webgpu.v  instance.v  pipeline.v  pipeline_layout.v  (+12 more)
client/: index.html  package.json  pnpm-lock.yaml  style.css
modules/: README.md
server/: Cargo.toml  go.mod  go.sum  import_map.jsonc  taskfile.yaml  velociraptor.yml  yamc.go
server/certs/: cert_dev.pem  key_dev.pem
server/cmd/: yamc.go
server/internal/: chat.go  http.go
server/network/: chat.go  http.go  protocol.go  protocol_test.go
server/src/: main.go  main.rs  server.ts
server/src/server/: mod.rs  types.rs
server/src/server/handlers/: chunk_handler.rs
server/src/world/: chunk_generator.rs  mod.rs
types/: package.json  tsconfig.json
(+113 files in other folders)
