[package]
name = "yamc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
nalgebra = { version = "0.32.3", features = ["serde", "serde-serialize"] }
salvo = { version = "*", features = ["cors", "websocket", "anyhow", "logging"] }
serde = "1"
serde_json = "1.0.103"
tokio = "1"
tracing = "*"
tracing-subscriber = "*"
